--- a/bmi.html
+++ b/bmi.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="box">
-    <h1 class="text-center dispaly-1 "><img src="./assets/body.png" alt="body"class=" img">BMI Calculator <img src="./assets/fitness64.png" alt="Diet" class="img"></h1>
+    <h1 class="text-center dispaly-1 "><img src=".\assets\body.png" alt="body"class=" img">BMI Calculator <img src=".\assets\fitness64.png" alt="Diet" class="img"></h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="bmi.js"></script>
@@ -45,7 +45,7 @@
             </div >
             
             <div class="col-md-8 mt-5 form1">
-                <h5 class="text-center display-5" class="h5"><img src="./assets/medical.png" alt="Medical Result" class="medical"><i>RESULT</i></h5>
+                <h5 class="text-center display-5" class="h5"><img src=".\assets\medical.png" alt="Medical Result" class="medical"><i>RESULT</i></h5>
                 <h3  class="text-center">Your BMI is: </h3>
                  <h4 id="text" class="text-center"> BMI </h4><br>
                  <h3 class="text-center">Weight Status:</h3>
